src/objects/CSM_QI_Knowledge_Article_Review__c.object
<CustomObject>
    <description>CSM-1892: ALL - KB Periodic revision component</description>
    <fields>
        <fullName>Comment__c</fullName>
        <description>CSM-1892: ALL - KB Periodic revision component</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Knowledge Article Reviews</relationshipLabel>
        <relationshipName>Knowledge_Article_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <label>Knowledge Article Review</label>
    <nameField>
        <displayFormat>KAR-{000000000}</displayFormat>
        <label>Article Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Article Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>